Fix docs content alignement

--- a/server/sonar-docs/src/templates/page.css
+++ b/server/sonar-docs/src/templates/page.css
@@ -366,7 +366,6 @@ a.search-result .note {
   padding-right: 16px;
   font-size: 15px;
   flex-grow: 1;
-  margin: 0 auto;
 }
 
 .page-container h1 {
